--- a/notebooks/1.0-data-generation.ipynb
+++ b/notebooks/1.0-data-generation.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Generation\n",
+    "\n",
+    "This script generates the data that is used in the evaluation of the model. The scoring of the generated samples is done through the system defined by Nobre et al. [1]\n",
+    "\n",
+    "[1] Nobre, C., Meyer, M., Streit, M., & Lex, A. (2019, June). The state of the art in visualizing multivariate networks. In Computer Graphics Forum (Vol. 38, No. 3, pp. 807-832)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,56 +94,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_samples(n_samples):\n",
+    "def generate_samples(n_samples, seed=None):\n",
+    "    if seed is not None:\n",
+    "        random.seed(seed)\n",
+    "        np.random.seed(seed)\n",
+    "\n",
     "    nobre_samples = []\n",
     "\n",
     "    for _ in range(n_samples):\n",
-    "        size = np.random.randint(10, 1000)\n",
-    "        volume = np.random.randint(0, size * (size - 1) // 2) / 2\n",
-    "        node_types = np.random.randint(1, 3)\n",
-    "        node_attributes = np.random.randint(0, 10)\n",
-    "        edge_types = np.random.randint(1, 2)\n",
-    "        edge_attributes = np.random.randint(0, 10)\n",
+    "        size_category = random.choice(['small', 'medium', 'large'])\n",
+    "        type_category = random.choice(['sparse', 'dense', 'tree', 'k-partite'])\n",
+    "        node_type_category = random.choice(['homogeneous', 'heterogeneous'])\n",
+    "        node_attributes_category = random.choice(['few', 'several'])\n",
+    "        edge_types_category = random.choice(['homogeneous', 'heterogeneous'])\n",
+    "        edge_attributes_category = random.choice(['few', 'several'])\n",
     "\n",
-    "        size_category = 'small' if size < 100 else 'medium' if size < 1000 else 'large'\n",
-    "        density = volume / (size * (size - 1) // 2)\n",
-    "        if density < 0.1:\n",
-    "            graph_type_category = 'sparse'\n",
-    "        elif density > 0.5:\n",
-    "            graph_type_category = 'dense'\n",
+    "        if size_category == 'small':\n",
+    "            size = np.random.randint(1, 100)\n",
+    "        elif size_category == 'medium':\n",
+    "            size = np.random.randint(100, 1000)\n",
     "        else:\n",
-    "            graph_type_category = random.choice(['tree', 'k-partite'])\n",
-    "        node_types_category = 'homogeneous' if node_types == 1 else 'heterogeneous'\n",
-    "        node_attributes_category = 'few' if node_attributes < 5 else 'several'\n",
-    "        edge_types_category = 'homogeneous' if edge_types == 1 else 'heterogeneous'\n",
-    "        edge_attributes_category = 'few' if edge_attributes < 3 else 'several'\n",
+    "            size = np.random.randint(1000, 2000)\n",
     "\n",
+    "        if node_type_category == 'homogeneous':\n",
+    "            node_types = 1\n",
+    "        elif node_type_category == 'heterogeneous':\n",
+    "            node_types = np.random.randint(2, 4) * 1\n",
+    "        \n",
+    "        if node_attributes_category == 'few':\n",
+    "            node_attributes = np.random.randint(1, 5)\n",
+    "        elif node_attributes_category == 'several':\n",
+    "            node_attributes = np.random.randint(6, 9)\n",
+    "\n",
+    "        if edge_types_category == 'homogeneous':\n",
+    "            edge_types = 1\n",
+    "        elif edge_types_category == 'heterogeneous':\n",
+    "            edge_types = np.random.randint(2, 4) * 1\n",
+    "\n",
+    "        if edge_attributes_category == 'few':\n",
+    "            edge_attributes = np.random.randint(1, 2)\n",
+    "        elif edge_attributes_category == 'several':\n",
+    "            edge_attributes = np.random.randint(3, 5)\n",
+    "\n",
+    "        if type_category == 'dense':\n",
+    "            lower_bound = max(1, size * (size - 1) // 4)\n",
+    "            upper_bound = max(lower_bound + 1, size * (size - 1) // 2)\n",
+    "            volume = np.random.randint(lower_bound, upper_bound)\n",
+    "        elif type_category == 'sparse':\n",
+    "            upper_bound = max(2, size * (size - 1) // 4)\n",
+    "            volume = np.random.randint(1, upper_bound)\n",
+    "        elif type_category == 'k-partite':\n",
+    "            upper_bound = max(2, size * (size - 1) // 2)\n",
+    "            volume = np.random.randint(1, upper_bound)\n",
+    "        elif type_category == 'tree':\n",
+    "            volume = size - 1\n",
+    "\n",
+    "        if size > 1:\n",
+    "            density = volume / (size * (size - 1) // 2)\n",
+    "            density = round(density, 2)\n",
+    "        else:\n",
+    "            density = 0\n",
+    "        \n",
     "        scores = {vis: 0 for vis in nobre_scores['size'].keys()}\n",
     "        for vis in scores.keys():\n",
     "            scores[vis] += nobre_scores['size'][vis][size_category]\n",
-    "            scores[vis] += nobre_scores['type'][vis][graph_type_category]\n",
-    "            scores[vis] += nobre_scores['node_types'][vis][node_types_category]\n",
+    "            scores[vis] += nobre_scores['type'][vis][type_category]\n",
+    "            scores[vis] += nobre_scores['node_types'][vis][node_type_category]\n",
     "            scores[vis] += nobre_scores['node_attributes'][vis][node_attributes_category]\n",
     "            scores[vis] += nobre_scores['edge_types'][vis][edge_types_category]\n",
     "            scores[vis] += nobre_scores['edge_attributes'][vis][edge_attributes_category]\n",
     "\n",
     "        best_visualization = max(scores, key=scores.get)\n",
     "\n",
-    "        domain = random.choice(['healthcare', 'asset performance management', 'cyber security', 'e-commerce'])\n",
+    "        domain = random.choice(['general'])\n",
     "        \n",
     "        statistics = {\n",
     "            \"size\": size,\n",
+    "            \"density\": density,\n",
     "            \"volume\": volume,\n",
     "            \"node_types\": node_types,\n",
     "            \"node_attributes\": node_attributes,\n",
     "            \"edge_types\": edge_types,\n",
     "            \"edge_attributes\": edge_attributes\n",
     "        }\n",
-    "\n",
     "\n",
     "        nobre_samples.append({\n",
     "            \"domain\": domain,\n",
@@ -141,22 +189,22 @@
     "            \"user_feedback\": 5\n",
     "        })\n",
     "\n",
-    "    return nobre_samples"
+    "    return nobre_samples\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training = generate_samples(80000, seed=42)\n",
+    "testing = generate_samples(20000, seed=42)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "training = generate_samples(20000)\n",
-    "testing = generate_samples(5000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
