--- a/notebooks/2.0-demo.ipynb
+++ b/notebooks/2.0-demo.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Demonstration\n",
+    "\n",
+    "This script demonstrates how the visualization agent works and makes recommendations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -23,10 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating an empty agent\n",
     "agent = RecommendationAgent(n_statistics=25, batch_size=10)\n",
     "\n",
     "agent.add_domain('healthcare')\n",
@@ -46,10 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Mock interactions with a user\n",
     "interactions_1 = [\n",
     "    {'domain': 'healthcare', 'statistics': {'stat1': 0.5, 'stat2': 0.8, 'stat3': 1.7, 'stat4': 0.1}, 'user_feedback': 4},\n",
     "    {'domain': 'healthcare', 'statistics': {'stat1': 0.7, 'stat2': 0.3, 'stat3': 1.7, 'stat4': 0.1}, 'user_feedback': 3},\n",
@@ -76,71 +87,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted visualization:  quilts\n",
-      "Updated scores based on user feedback\n",
-      "\n",
-      "Predicted visualization:  biofabric\n",
+      "Predicted visualization:  nodelink attribute driven positioning\n",
       "Updated scores based on user feedback\n",
       "\n",
       "Predicted visualization:  nodelink attribute driven faceting\n",
-      "Updated scores based on user feedback\n",
-      "\n",
-      "Predicted visualization:  biofabric\n",
-      "Updated scores based on user feedback\n",
-      "\n",
-      "Predicted visualization:  biofabric\n",
-      "Updated scores based on user feedback\n",
-      "\n",
-      "Predicted visualization:  nodelink attribute driven positioning\n",
-      "Updated scores based on user feedback\n",
-      "\n",
-      "Predicted visualization:  quilts\n",
-      "Updated scores based on user feedback\n",
-      "\n",
-      "Predicted visualization:  treemap\n",
-      "Updated scores based on user feedback\n",
-      "\n",
-      "Predicted visualization:  adjacency matrix\n",
-      "Updated scores based on user feedback\n",
-      "\n",
-      "Predicted visualization:  treemap\n",
-      "Updated scores based on user feedback\n",
-      "\n",
-      "Predicted visualization:  adjacency matrix\n",
-      "Updated scores based on user feedback\n",
-      "\n",
-      "Predicted visualization:  treemap\n",
-      "Updated scores based on user feedback\n",
-      "\n",
-      "Predicted visualization:  biofabric\n",
-      "Updated scores based on user feedback\n",
-      "\n",
-      "Predicted visualization:  treemap\n",
-      "Updated scores based on user feedback\n",
-      "\n",
-      "Predicted visualization:  adjacency matrix\n",
-      "Updated scores based on user feedback\n",
-      "\n",
-      "Predicted visualization:  nodelink attribute driven faceting\n",
-      "Updated scores based on user feedback\n",
-      "\n",
-      "Predicted visualization:  nodelink attribute driven positioning\n",
-      "Updated scores based on user feedback\n",
-      "\n",
-      "Predicted visualization:  biofabric\n",
-      "Updated scores based on user feedback\n",
-      "\n",
-      "Predicted visualization:  nodelink attribute driven positioning\n",
       "Updated scores based on user feedback\n",
       "\n",
       "Predicted visualization:  nodelink topology driven\n",
+      "Updated scores based on user feedback\n",
+      "\n",
+      "Predicted visualization:  adjacency matrix\n",
+      "Updated scores based on user feedback\n",
+      "\n",
+      "Predicted visualization:  nodelink attribute driven faceting\n",
+      "Updated scores based on user feedback\n",
+      "\n",
+      "Predicted visualization:  treemap\n",
+      "Updated scores based on user feedback\n",
+      "\n",
+      "Predicted visualization:  nodelink topology driven\n",
+      "Updated scores based on user feedback\n",
+      "\n",
+      "Predicted visualization:  adjacency matrix\n",
+      "Updated scores based on user feedback\n",
+      "\n",
+      "Predicted visualization:  biofabric\n",
+      "Updated scores based on user feedback\n",
+      "\n",
+      "Predicted visualization:  nodelink attribute driven positioning\n",
+      "[0.21672641 0.60814926 0.86472037 0.9057802  0.71616746 0.93404921\n",
+      " 0.13692428 0.69566622]\n",
+      "[0.41360041 0.66452449 0.43069255 0.39921708 0.19034693 0.85633606\n",
+      " 0.3369036  0.80179031]\n",
+      "[0.4719496  0.46759382 0.55773365 0.70735819 0.360719   0.92924574\n",
+      " 0.4262609  0.99414688]\n",
+      "[0.43422061 0.8250744  0.73901645 0.60372049 0.49788038 0.30984964\n",
+      " 0.66495205 0.77324377]\n",
+      "[0.44010922 0.16814941 0.36767087 0.75378453 0.21509334 0.76598312\n",
+      " 0.00909747 0.99971405]\n",
+      "[0.35687023 0.06533362 0.34950959 0.72441811 0.99318715 0.98701323\n",
+      " 0.30508148 0.32843216]\n",
+      "[0.46857892 0.87821353 0.30384481 0.33884304 0.44143183 0.79774158\n",
+      " 0.37626205 0.09221665]\n",
+      "[9.70247530e-01 6.22968766e-01 8.39655259e-04 7.44802681e-01\n",
+      " 8.77438663e-01 2.57864041e-01 2.14057666e-01 1.05500910e-01]\n",
+      "[0.24204205 0.83247441 0.13647273 0.06922232 0.09820924 0.33510865\n",
+      " 0.827768   0.51292531]\n",
+      "[0.76622714 0.20839117 0.62132895 0.27063891 0.35687803 0.073984\n",
+      " 0.9226248  0.91266356]\n",
+      "Updated scores based on user feedback\n",
+      "\n",
+      "Predicted visualization:  treemap\n",
+      "Updated scores based on user feedback\n",
+      "\n",
+      "Predicted visualization:  nodelink attribute driven positioning\n",
+      "Updated scores based on user feedback\n",
+      "\n",
+      "Predicted visualization:  treemap\n",
+      "Updated scores based on user feedback\n",
+      "\n",
+      "Predicted visualization:  quilts\n",
+      "Updated scores based on user feedback\n",
+      "\n",
+      "Predicted visualization:  treemap\n",
+      "Updated scores based on user feedback\n",
+      "\n",
+      "Predicted visualization:  sunburst\n",
+      "Updated scores based on user feedback\n",
+      "\n",
+      "Predicted visualization:  biofabric\n",
+      "Updated scores based on user feedback\n",
+      "\n",
+      "Predicted visualization:  nodelink topology driven\n",
+      "Updated scores based on user feedback\n",
+      "\n",
+      "Predicted visualization:  quilts\n",
+      "Updated scores based on user feedback\n",
+      "\n",
+      "Predicted visualization:  nodelink attribute driven positioning\n",
+      "[0.76764351 0.14253952 0.93050379 0.61789857 0.00685431 0.97250456\n",
+      " 0.99042804 0.96294953]\n",
+      "[0.83794197 0.78209238 0.09115884 0.61764117 0.897272   0.63384567\n",
+      " 0.97128739 0.08661108]\n",
+      "[0.48556654 0.05053841 0.52826473 0.50100586 0.32000585 0.67501482\n",
+      " 0.86229273 0.44274478]\n",
+      "[0.44626074 0.220241   0.8510188  0.69868348 0.48633883 0.92559969\n",
+      " 0.7848306  0.59757862]\n",
+      "[0.05900286 0.37881583 0.505879   0.88597416 0.486915   0.07607263\n",
+      " 0.06920502 0.12799321]\n",
+      "[0.84956766 0.4748722  0.79359395 0.41037348 0.10401409 0.17999099\n",
+      " 0.56429677 0.97912384]\n",
+      "[0.6973717  0.84174903 0.53456175 0.67766573 0.08847278 0.98462362\n",
+      " 0.10429985 0.14323177]\n",
+      "[0.2077406  0.61559427 0.15099013 0.17633895 0.26800528 0.60903354\n",
+      " 0.19059001 0.59084198]\n",
+      "[0.87360359 0.80753872 0.6600559  0.04662549 0.59985148 0.59285872\n",
+      " 0.37678417 0.56331374]\n",
+      "[0.01500424 0.14040854 0.60765834 0.15335609 0.95974737 0.92986998\n",
+      " 0.70498824 0.25195607]\n",
       "Updated scores based on user feedback\n",
       "\n"
      ]
@@ -159,15 +210,6 @@
     "        agent.update_q_value(domain, state_id, action, user_feedback, require_feedback)\n",
     "        print('Updated scores based on user feedback')\n",
     "    print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agent.export_index()"
    ]
   }
  ],
