--- a/notebooks/1.0-data-generation.ipynb
+++ b/notebooks/1.0-data-generation.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,11 +94,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_samples(n_samples, seed=None):\n",
+    "def generate_samples(n_samples, seed=None, testing=False):\n",
     "    if seed is not None:\n",
     "        random.seed(seed)\n",
     "        np.random.seed(seed)\n",
@@ -168,7 +168,19 @@
     "            scores[vis] += nobre_scores['edge_types'][vis][edge_types_category]\n",
     "            scores[vis] += nobre_scores['edge_attributes'][vis][edge_attributes_category]\n",
     "\n",
-    "        best_visualization = max(scores, key=scores.get)\n",
+    "        if not testing:\n",
+    "            visualizations = list(scores.keys())\n",
+    "            best_visualization = random.choice(visualizations)\n",
+    "            sorted_scores = sorted(scores.items(), key=lambda item: item[1], reverse=True)\n",
+    "            sorted_visualizations = [vis for vis, _ in sorted_scores]\n",
+    "            ranks = {vis: rank for rank, (vis, _) in enumerate(sorted_scores)}\n",
+    "            rank = ranks[best_visualization]\n",
+    "            max_rank = len(visualizations) - 1\n",
+    "            user_feedback = round(-5 + 10 * (max_rank - rank) / max_rank, 2)\n",
+    "        else:\n",
+    "            best_visualization = max(scores, key=scores.get)\n",
+    "            sorted_visualizations = []\n",
+    "            user_feedback = 5\n",
     "\n",
     "        domain = random.choice(['general'])\n",
     "        \n",
@@ -186,7 +198,8 @@
     "            \"domain\": domain,\n",
     "            \"statistics\": statistics,\n",
     "            \"visualization\": best_visualization,\n",
-    "            \"user_feedback\": 5\n",
+    "            \"user_feedback\": user_feedback,\n",
+    "            \"sorted_visualizations\": sorted_visualizations\n",
     "        })\n",
     "\n",
     "    return nobre_samples\n"
@@ -194,17 +207,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "training = generate_samples(80000, seed=42)\n",
-    "testing = generate_samples(20000, seed=42)"
+    "testing = generate_samples(20000, seed=42, testing=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
