--- a/notebooks/1.0-data-generation.ipynb
+++ b/notebooks/1.0-data-generation.ipynb
@@ -13,18 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import random\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +179,7 @@
     "            max_rank = len(visualizations) - 1\n",
     "            user_feedback = round(-5 + 10 * (max_rank - rank) / max_rank, 2)\n",
     "        else:\n",
-    "            best_visualization = max(scores, key=scores.get)\n",
+    "            best_visualization = random.choice([vis for vis, score in scores.items() if score == max(scores.values())])\n",
     "            sorted_visualizations = []\n",
     "            user_feedback = 5\n",
     "\n",
@@ -211,8 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training = generate_samples(80000, seed=42)\n",
-    "testing = generate_samples(20000, seed=42, testing=True)"
+    "interactions = generate_samples(80000, seed=42)"
    ]
   },
   {
@@ -221,11 +221,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/training.json', 'w') as file:\n",
-    "    json.dump(training, file, indent=4)\n",
-    "\n",
-    "with open('../data/testing.json', 'w') as file:\n",
-    "    json.dump(testing, file, indent=4)"
+    "with open('../data/interactions.json', 'w') as file:\n",
+    "    json.dump(interactions, file, indent=4)"
    ]
   },
   {
@@ -252,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
