cleaned up code

--- a/notebooks/3.0-baseline.ipynb
+++ b/notebooks/3.0-baseline.ipynb
@@ -128,13 +128,10 @@
    ],
    "source": [
     "n = 100\n",
-    "\n",
-    "# Initialize lists to track rewards and average rewards\n",
     "rewards = []\n",
     "average_rewards = []\n",
     "sample_intervals = []\n",
     "\n",
-    "# Training loop\n",
     "for i, sample in enumerate(interactions[:5000]):\n",
     "    domain = sample['domain']\n",
     "    statistics = sample['statistics']\n",
@@ -155,7 +152,7 @@
     "    if (i + 1) % n == 0:\n",
     "        avg_reward = np.mean(rewards[-n:])\n",
     "        average_rewards.append(avg_reward)\n",
-    "        sample_intervals.append(i + 1)  # Keep track of the sample numbers\n",
+    "        sample_intervals.append(i + 1)\n",
     "        print(f'Round: {i+1}, Average Reward: {avg_reward:.2f}')"
    ]
   },
@@ -171,7 +168,6 @@
     "    'average_rewards': average_rewards\n",
     "}\n",
     "\n",
-    "# Save to JSON file\n",
     "with open(f'../data/analysis/result_{agent.alpha}_{agent.epsilon}.json', 'w') as f:\n",
     "    json.dump(data, f)"
    ]
@@ -264,6 +260,8 @@
     }
    ],
    "source": [
+    "# Code from: https://scikit-learn.org/stable/modules/generated/sklearn.inspection.DecisionBoundaryDisplay.html\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -271,11 +269,9 @@
     "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
     "from sklearn.inspection import DecisionBoundaryDisplay\n",
     "\n",
-    "# Encode the labels to numeric values\n",
     "label_encoder = LabelEncoder()\n",
     "numeric_labels = label_encoder.fit_transform(labels)\n",
     "\n",
-    "# Train a k-nearest neighbors classifier on the PCA-transformed data\n",
     "clf = Pipeline(\n",
     "    steps=[(\"scaler\", StandardScaler()), (\"knn\", KNeighborsClassifier(n_neighbors=5))]\n",
     ")\n",
@@ -306,7 +302,7 @@
     "    f\"Decision Boundary\"\n",
     ")\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -337,7 +333,6 @@
     "    \"size\", \"density\", \"volume\", \"node_types\", \"node_attributes\", \"edge_types\", \"edge_attributes\"\n",
     "]\n",
     "\n",
-    "# Extract state_ids and Q-values\n",
     "state_ids = []\n",
     "q_values = []\n",
     "\n",
@@ -348,12 +343,8 @@
     "    state_ids.append(state_id)\n",
     "    q_values.append(q_value)\n",
     "\n",
-    "# Convert to numpy arrays\n",
     "state_ids = np.array(state_ids)\n",
     "q_values = np.array(q_values)\n",
-    "\n",
-    "# Calculate feature importances\n",
-    "# Feature importance can be approximated by the variance of Q-values with respect to each feature in state_ids\n",
     "n_features = state_ids.shape[1]\n",
     "feature_importances = np.zeros(n_features)\n",
     "\n",
@@ -369,22 +360,14 @@
     "\n",
     "    feature_importances[i] = np.mean(feature_q_variance)\n",
     "\n",
-    "# Plot the feature importances\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.bar(feature_names, feature_importances)\n",
     "plt.xlabel('Feature Index')\n",
     "plt.ylabel('Importance (Mean Variance of Q-values)')\n",
     "plt.title('Feature Importance Based on Q-values')\n",
     "plt.xticks(rotation=45)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -403,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
