--- a/notebooks/4.0-analysis.ipynb
+++ b/notebooks/4.0-analysis.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evaluation"
+    "# Evaluation\n",
+    "This script evaluates the results from the baseline model in notebook 3"
    ]
   },
   {
