--- a/notebooks/3.0-baseline.ipynb
+++ b/notebooks/3.0-baseline.ipynb
@@ -11,19 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "import os\n",
-    "\n",
-    "sys.path.insert(0, os.path.abspath(os.path.join(os.getcwd(), '..', 'src')))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +19,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.decomposition import PCA\n",
-    "from agent import RecommendationAgent"
+    "from vigor.agent import RecommendationAgent"
    ]
   },
   {
@@ -386,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
