--- a/notebooks/3-evaluation.ipynb
+++ b/notebooks/3-evaluation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,10 +31,10 @@
     "    vigor = VIGOR()\n",
     "\n",
     "    visualization_preds = {}\n",
-    "    for vis, score, stat, min, max in predicates:\n",
+    "    for vis, score, stat, min_val, max_val in predicates:\n",
     "        if vis not in visualization_preds:\n",
     "            visualization_preds[vis] = Visualization(vis)\n",
-    "        visualization_preds[vis].add_predicate(Predicate(stat, min, max, score))\n",
+    "        visualization_preds[vis].add_predicate(Predicate(stat, min_val, max_val, score))\n",
     "\n",
     "    for vis in visualization_preds.values():\n",
     "        vigor.add_visualization(vis)\n",
@@ -47,9 +47,10 @@
     "    for interaction_index, interaction in enumerate(data[:5]):\n",
     "        statistics = interaction['statistics']\n",
     "        sorted_visualizations = interaction['sorted_visualizations']\n",
-    "        recommendations = vigor.recommend_n(statistics, 8)\n",
+    "        recommendations_with_scores = vigor.recommend_n(statistics, 8)  # Get recommendations with scores\n",
     "\n",
-    "        for i, recommendation in enumerate(recommendations):\n",
+    "        print(\"recommendations_with_scores\", recommendations_with_scores)\n",
+    "        for i, (recommendation, score) in enumerate(recommendations_with_scores):\n",
     "            recommendation_str = recommendation.name.upper()  # Convert to match the format in sorted_visualizations\n",
     "\n",
     "            if recommendation_str in sorted_visualizations:\n",
@@ -58,17 +59,23 @@
     "            else:\n",
     "                feedback = 0  # If not found in sorted_visualizations\n",
     "\n",
+    "            print(\"feedback\", feedback)\n",
+    "            # Update visualization with feedback based on the recommendation\n",
     "            for vis in vigor.visualizations:\n",
     "                if vis.visualization_type == recommendation:\n",
+    "                    print(vis, statistics)\n",
+    "                    print(vis.predicates)\n",
     "                    vis.update(feedback, statistics)  # Update the visualization with feedback\n",
     "                    break\n",
     "\n",
     "        # Calculate Spearman's rank correlation\n",
-    "        min_len = min(len(recommendations), len(sorted_visualizations))\n",
-    "        recommendations_truncated = recommendations[:min_len]\n",
+    "        min_len = min(len(recommendations_with_scores), len(sorted_visualizations))\n",
+    "        \n",
+    "        # Truncate recommendations and scores\n",
+    "        recommendations_truncated = recommendations_with_scores[:min_len]\n",
     "        sorted_visualizations_truncated = sorted_visualizations[:min_len]\n",
     "\n",
-    "        recommendations_indices = [list(VisualizationType).index(rec) for rec in recommendations_truncated]\n",
+    "        recommendations_indices = [list(VisualizationType).index(rec[0]) for rec in recommendations_truncated]  # Get indices of recommended visualizations\n",
     "        sorted_visualizations_names = [vis.name.upper() for vis in VisualizationType]\n",
     "        sorted_visualizations_indices = [sorted_visualizations_names.index(visualization) for visualization in sorted_visualizations_truncated]\n",
     "\n",
@@ -89,135 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size\n",
-      "size\n",
-      "size\n",
-      "density\n",
-      "density\n",
-      "node_attributes\n",
-      "node_attributes\n",
-      "node_types\n",
-      "node_types\n",
-      "edge_attributes\n",
-      "edge_attributes\n",
-      "edge_types\n",
-      "edge_types\n",
-      "size\n",
-      "size\n",
-      "size\n",
-      "density\n",
-      "density\n",
-      "node_attributes\n",
-      "node_attributes\n",
-      "node_types\n",
-      "node_types\n",
-      "edge_attributes\n",
-      "edge_attributes\n",
-      "edge_types\n",
-      "edge_types\n",
-      "size\n",
-      "size\n",
-      "size\n",
-      "density\n",
-      "density\n",
-      "node_attributes\n",
-      "node_attributes\n",
-      "node_types\n",
-      "node_types\n",
-      "edge_attributes\n",
-      "edge_attributes\n",
-      "edge_types\n",
-      "edge_types\n",
-      "size\n",
-      "size\n",
-      "size\n",
-      "density\n",
-      "density\n",
-      "node_attributes\n",
-      "node_attributes\n",
-      "node_types\n",
-      "node_types\n",
-      "edge_attributes\n",
-      "edge_attributes\n",
-      "edge_types\n",
-      "edge_types\n",
-      "size\n",
-      "size\n",
-      "size\n",
-      "density\n",
-      "density\n",
-      "node_attributes\n",
-      "node_attributes\n",
-      "node_types\n",
-      "node_types\n",
-      "edge_attributes\n",
-      "edge_attributes\n",
-      "edge_types\n",
-      "edge_types\n",
-      "size\n",
-      "size\n",
-      "size\n",
-      "density\n",
-      "density\n",
-      "node_attributes\n",
-      "node_attributes\n",
-      "node_types\n",
-      "node_types\n",
-      "edge_attributes\n",
-      "edge_attributes\n",
-      "edge_types\n",
-      "edge_types\n",
-      "size\n",
-      "size\n",
-      "size\n",
-      "density\n",
-      "density\n",
-      "node_attributes\n",
-      "node_attributes\n",
-      "node_types\n",
-      "node_types\n",
-      "edge_attributes\n",
-      "edge_attributes\n",
-      "edge_types\n",
-      "edge_types\n",
-      "size\n",
-      "size\n",
-      "size\n",
-      "density\n",
-      "density\n",
-      "node_attributes\n",
-      "node_attributes\n",
-      "node_types\n",
-      "node_types\n",
-      "edge_attributes\n",
-      "edge_attributes\n",
-      "edge_types\n",
-      "edge_types\n",
-      "{'size': 41, 'density': 0.05, 'volume': 40, 'node_types': 1, 'node_attributes': 6, 'edge_types': 1, 'edge_attributes': 1}\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "The size of tensor a (14) must match the size of tensor b (13) at non-singleton dimension 1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Calculate correlations for three different JSON files\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m correlation_data_1 \u001b[38;5;241m=\u001b[39m \u001b[43mcalculate_correlations\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../data/evaluation/uninformed_user.json\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mUninformed User\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m correlation_data_2 \u001b[38;5;241m=\u001b[39m calculate_correlations(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/evaluation/informed_user.json\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mInformed User\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m correlation_data_3 \u001b[38;5;241m=\u001b[39m calculate_correlations(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/evaluation/fifty_fifty_user.json\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBalanced User\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[16], line 37\u001b[0m, in \u001b[0;36mcalculate_correlations\u001b[0;34m(file_path, label)\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m vis \u001b[38;5;129;01min\u001b[39;00m vigor\u001b[38;5;241m.\u001b[39mvisualizations:\n\u001b[1;32m     36\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m vis\u001b[38;5;241m.\u001b[39mvisualization_type \u001b[38;5;241m==\u001b[39m recommendation:\n\u001b[0;32m---> 37\u001b[0m             \u001b[43mvis\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupdate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfeedback\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstatistics\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Update the visualization with feedback\u001b[39;00m\n\u001b[1;32m     38\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m     40\u001b[0m \u001b[38;5;66;03m# Calculate Spearman's rank correlation\u001b[39;00m\n",
-      "File \u001b[0;32m~/Developer/Experiments/vigor-visualization-recommendation-for-graphs/vigor/model/visualization.py:37\u001b[0m, in \u001b[0;36mVisualization.update\u001b[0;34m(self, feedback, stats, n_iter)\u001b[0m\n\u001b[1;32m     34\u001b[0m bce_loss \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mBCELoss()\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n_iter):\n\u001b[0;32m---> 37\u001b[0m     pred \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_predict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmu\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     38\u001b[0m     loss \u001b[38;5;241m=\u001b[39m bce_loss(pred, feedback_tensor)\n\u001b[1;32m     39\u001b[0m     optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n",
-      "File \u001b[0;32m~/Developer/Experiments/vigor-visualization-recommendation-for-graphs/vigor/model/visualization.py:54\u001b[0m, in \u001b[0;36mVisualization._predict\u001b[0;34m(self, x, a, mu)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"UMAP-inspired prediction function based on `a` and `mu`.\"\"\"\u001b[39;00m\n\u001b[1;32m     53\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m\n\u001b[0;32m---> 54\u001b[0m pred \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m/\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m ((a\u001b[38;5;241m.\u001b[39mabs() \u001b[38;5;241m*\u001b[39m (\u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mmu\u001b[49m)\u001b[38;5;241m.\u001b[39mabs())\u001b[38;5;241m.\u001b[39mpow(b))\u001b[38;5;241m.\u001b[39msum(\u001b[38;5;241m1\u001b[39m, keepdim\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m))\n\u001b[1;32m     55\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m pred\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (14) must match the size of tensor b (13) at non-singleton dimension 1"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate correlations for three different JSON files\n",
     "correlation_data_1 = calculate_correlations('../data/evaluation/uninformed_user.json', 'Uninformed User')\n",
@@ -227,109 +108,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<style>\n",
-       "  #altair-viz-99f21a2254904c99925c3a9db40ceffb.vega-embed {\n",
-       "    width: 100%;\n",
-       "    display: flex;\n",
-       "  }\n",
-       "\n",
-       "  #altair-viz-99f21a2254904c99925c3a9db40ceffb.vega-embed details,\n",
-       "  #altair-viz-99f21a2254904c99925c3a9db40ceffb.vega-embed details summary {\n",
-       "    position: relative;\n",
-       "  }\n",
-       "</style>\n",
-       "<div id=\"altair-viz-99f21a2254904c99925c3a9db40ceffb\"></div>\n",
-       "<script type=\"text/javascript\">\n",
-       "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
-       "  (function(spec, embedOpt){\n",
-       "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-99f21a2254904c99925c3a9db40ceffb\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-99f21a2254904c99925c3a9db40ceffb\");\n",
-       "    }\n",
-       "    const paths = {\n",
-       "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
-       "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm/vega-lib?noext\",\n",
-       "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm/vega-lite@5.20.1?noext\",\n",
-       "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm/vega-embed@6?noext\",\n",
-       "    };\n",
-       "\n",
-       "    function maybeLoadScript(lib, version) {\n",
-       "      var key = `${lib.replace(\"-\", \"\")}_version`;\n",
-       "      return (VEGA_DEBUG[key] == version) ?\n",
-       "        Promise.resolve(paths[lib]) :\n",
-       "        new Promise(function(resolve, reject) {\n",
-       "          var s = document.createElement('script');\n",
-       "          document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
-       "          s.async = true;\n",
-       "          s.onload = () => {\n",
-       "            VEGA_DEBUG[key] = version;\n",
-       "            return resolve(paths[lib]);\n",
-       "          };\n",
-       "          s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
-       "          s.src = paths[lib];\n",
-       "        });\n",
-       "    }\n",
-       "\n",
-       "    function showError(err) {\n",
-       "      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n",
-       "      throw err;\n",
-       "    }\n",
-       "\n",
-       "    function displayChart(vegaEmbed) {\n",
-       "      vegaEmbed(outputDiv, spec, embedOpt)\n",
-       "        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n",
-       "    }\n",
-       "\n",
-       "    if(typeof define === \"function\" && define.amd) {\n",
-       "      requirejs.config({paths});\n",
-       "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
-       "    } else {\n",
-       "      maybeLoadScript(\"vega\", \"5\")\n",
-       "        .then(() => maybeLoadScript(\"vega-lite\", \"5.20.1\"))\n",
-       "        .then(() => maybeLoadScript(\"vega-embed\", \"6\"))\n",
-       "        .catch(showError)\n",
-       "        .then(() => displayChart(vegaEmbed));\n",
-       "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-ff58dc7da449859177917a6116549eab\"}, \"mark\": {\"type\": \"line\", \"point\": true}, \"encoding\": {\"color\": {\"field\": \"label\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"interaction_index\", \"type\": \"quantitative\"}, {\"field\": \"correlation\", \"type\": \"quantitative\"}, {\"field\": \"label\", \"type\": \"nominal\"}], \"x\": {\"field\": \"interaction_index\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation\", \"type\": \"quantitative\"}}, \"height\": 400, \"title\": \"Spearman Rank Correlation Over Time\", \"width\": 600, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.20.1.json\", \"datasets\": {\"data-ff58dc7da449859177917a6116549eab\": [{\"interaction_index\": 0, \"correlation\": 0.261904761904762, \"label\": \"Uninformed User\"}, {\"interaction_index\": 1, \"correlation\": 0.3333333333333334, \"label\": \"Uninformed User\"}, {\"interaction_index\": 2, \"correlation\": 0.261904761904762, \"label\": \"Uninformed User\"}, {\"interaction_index\": 3, \"correlation\": 0.28571428571428575, \"label\": \"Uninformed User\"}, {\"interaction_index\": 4, \"correlation\": 0.3571428571428572, \"label\": \"Uninformed User\"}, {\"interaction_index\": 0, \"correlation\": -0.28571428571428575, \"label\": \"Informed User\"}, {\"interaction_index\": 1, \"correlation\": -0.28571428571428575, \"label\": \"Informed User\"}, {\"interaction_index\": 2, \"correlation\": -0.3571428571428572, \"label\": \"Informed User\"}, {\"interaction_index\": 3, \"correlation\": -0.261904761904762, \"label\": \"Informed User\"}, {\"interaction_index\": 4, \"correlation\": -0.3571428571428572, \"label\": \"Informed User\"}, {\"interaction_index\": 0, \"correlation\": -0.28571428571428575, \"label\": \"Balanced User\"}, {\"interaction_index\": 1, \"correlation\": -0.2380952380952381, \"label\": \"Balanced User\"}, {\"interaction_index\": 2, \"correlation\": -0.07142857142857144, \"label\": \"Balanced User\"}, {\"interaction_index\": 3, \"correlation\": 0.4285714285714286, \"label\": \"Balanced User\"}, {\"interaction_index\": 4, \"correlation\": 0.19047619047619052, \"label\": \"Balanced User\"}]}}, {\"mode\": \"vega-lite\"});\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "alt.Chart(...)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Combine all correlation data\n",
     "all_correlation_data = correlation_data_1 + correlation_data_2 + correlation_data_3\n",
-    "\n",
-    "# Convert correlation data to a DataFrame\n",
     "correlation_df = pd.DataFrame(all_correlation_data)\n",
     "\n",
-    "# Create an Altair line chart for the correlations\n",
     "chart = alt.Chart(correlation_df).mark_line(point=True).encode(\n",
     "    x='interaction_index:Q',\n",
     "    y='correlation:Q',\n",
-    "    color='label:N',  # Use different colors for each dataset\n",
+    "    color=alt.Color('label:N', legend=alt.Legend(title=\"Dataset\", orient='top-left')),  # Legend inside the graph\n",
     "    tooltip=['interaction_index:Q', 'correlation:Q', 'label:N']\n",
     ").properties(\n",
     "    title='Spearman Rank Correlation Over Time',\n",
     "    width=600,\n",
     "    height=400\n",
+    ").configure_view(\n",
+    "    strokeOpacity=0\n",
+    ").configure_background(\n",
+    "    color='transparent'\n",
     ")\n",
     "\n",
-    "# Show the chart\n",
     "chart.display()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
