--- a/notebooks/1-use-cases.ipynb
+++ b/notebooks/1-use-cases.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Use Cases for VIGOR"
+    "# Use Cases for VIGOR\n",
+    "\n",
+    "This notebook is to demonstrate a use case for VIGOR"
    ]
   },
   {
@@ -23,7 +25,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Recommendation Use Case"
+    "## Recommendation Use Case\n",
+    "\n",
+    "Uses a sample database provided by Neo4j"
    ]
   },
   {
@@ -71,28 +75,6 @@
     "        \"q_type\": \"Verbose\",\n",
     "        \"question\": \"Find the names of the top 5 movies with the lowest imdbRating.\",\n",
     "        \"query\": \"MATCH (m:Movie) WHERE m.imdbRating IS NOT NULL RETURN m LIMIT 10\"\n",
-    "      }\n",
-    "    ],\n",
-    "    \"twitter\": [\n",
-    "      {\n",
-    "        \"q_type\": \"Retrieval\",\n",
-    "        \"question\": \"List the top 3 hashtags used in tweets posted by users from 'Graphs Are Everywhere.\",\n",
-    "        \"query\": \"MATCH (u:User {location: 'Graphs Are Everywhere'})-[:POSTS]->(t:Tweet)-[:TAGS]->(h:Hashtag) RETURN h LIMIT 10\"\n",
-    "      },\n",
-    "      {\n",
-    "        \"q_type\": \"Aggregation\",\n",
-    "        \"question\": \"Which three users have tweeted the most as of the latest date in the dataset?\",\n",
-    "        \"query\": \"MATCH (u:User)-[:POSTS]->(t:Tweet) WHERE t.created_at IS NOT NULL WITH u, count(t) AS num_tweets, max(t.created_at) AS latest_tweet RETURN u LIMIT 10\"\n",
-    "      },\n",
-    "      {\n",
-    "        \"q_type\": \"Pathfinding\",\n",
-    "        \"question\": \"Which tweets mention the user with the screen name 'neo4j'?\",\n",
-    "        \"query\": \"MATCH (t:Tweet)-[:MENTIONS]->(u:User {screen_name: 'neo4j'}) RETURN t LIMIT 10\"\n",
-    "      },\n",
-    "       {\n",
-    "        \"q_type\": \"Verbose\",\n",
-    "        \"question\": \"Find the first 3 tweets that have been retweeted more than 100 times.\",\n",
-    "        \"query\": \"MATCH (t:Tweet) WHERE t.favorites > 100 RETURN t LIMIT 10\"\n",
     "      }\n",
     "    ],\n",
     "}"
