--- a/notebooks/2-data_generation.ipynb
+++ b/notebooks/2-data_generation.ipynb
@@ -8,6 +8,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the evaluation, we model three types of users:\n",
+    "- Uninformed user (the opposite of nobre)\n",
+    "- 50-50 user (50% of the time aligned with nobre)\n",
+    "- Informed user (fully aligned with nobre scores)\n",
+    "\n",
+    "Given the set of system predicates to start off with, we'll see how the system responds to the user feedback. This notebook generates the data for the evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
